# offidized

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile
crates/offidized/: Cargo.toml  README.md
crates/offidized-cli/: Cargo.toml  README.md
crates/offidized-cli/src/: format.rs  main.rs  output.rs  range_parse.rs
crates/offidized-cli/tests/: cli_integration.rs
crates/offidized-codegen/: Cargo.toml  README.md
crates/offidized-codegen/src/: generator.rs  lib.rs  main.rs  schema.rs
crates/offidized-docview/: .gitignore  Cargo.toml  eslint.config.js  justfile  package-lock.json  package.json  serve.ts  tsconfig.json
crates/offidized-docview/demo/: caret-harness.html  caret-harness.ts  editor-demo.ts  editor.html  index.html  relay-server.ts  viewer.ts
crates/offidized-docview/docs/: ARCHITECTURE.md  COLLABORATION.md  COLLABORATION_CHECKLIST.md  EDITOR_PARITY.md  EDITOR_PARITY_TRACKER.md  INTEROP.md  INTEROP_FEATURE_BUCKETS.md  PAGINATION_v1.md  PAGINATION_v2.md  PAGINATION_v2_TRACKER.md  PARITY_SPECS.md
crates/offidized-docview/js/: adapter.ts  doc-edit.ts  doc-view.d.ts  doc-view.ts  editor.ts  paginator.ts  position.ts  renderer.ts  styles.ts  sync-provider.ts  types.ts
crates/offidized-docview/src/: bridge.rs  convert.rs  lib.rs  model.rs  units.rs
crates/offidized-docview/tests/: convert_tests.rs  editor_tests.rs
crates/offidized-docx/: Cargo.toml  README.md
crates/offidized-docx/src/: bookmark.rs  comment.rs  content_control.rs  document.rs  error.rs  footnote.rs  image.rs  lib.rs  numbering.rs  paragraph.rs  properties.rs  run.rs  section.rs  style.rs  table.rs  text.rs
crates/offidized-docx/tests/: content_roundtrip.rs
crates/offidized-ffi/: Cargo.toml  README.md
crates/offidized-ffi/include/: offidized_ffi.h
crates/offidized-ffi/src/: lib.rs
crates/offidized-ffi/tests/: ffi_api.rs
crates/offidized-formula/: Cargo.toml  README.md
crates/offidized-formula/src/: ast.rs  context.rs  error.rs  eval.rs  lexer.rs  lib.rs  parser.rs  reference.rs  token.rs  value.rs
crates/offidized-ir/: Cargo.toml  README.md
crates/offidized-ir/src/: header.rs  lib.rs  unified_api.rs
crates/offidized-ir/tests/: fuzz.rs  integration.rs  stress.rs
crates/offidized-opc/: Cargo.toml  README.md
crates/offidized-opc/src/: content_types.rs  data_part.rs  error.rs  flat_opc.rs  hyperlink.rs  lib.rs  media_reference.rs  open_settings.rs  package.rs  part.rs  part_extension.rs  part_uri_helper.rs  properties.rs  raw.rs  relationship.rs  uri.rs  xml_util.rs
crates/offidized-pptview/: Cargo.toml  justfile  package.json  serve.ts  tsconfig.json
crates/offidized-pptview/demo/: index.html  viewer.ts
crates/offidized-pptview/js/: navigator.ts  ppt-view.ts  renderer.ts  styles.ts  types.ts
crates/offidized-pptview/src/: bridge.rs  convert.rs  lib.rs  model.rs  units.rs
crates/offidized-pptview/tests/: harness.rs
crates/offidized-pptx/: Cargo.toml  README.md
crates/offidized-pptx/src/: actions.rs  animation_advanced.rs  chart.rs  chart_template.rs  chart_types.rs  color.rs  color_resolver.rs  comment.rs  custom_show.rs  error.rs  image.rs  layout_inheritance.rs  lib.rs  media_controls.rs  placeholder_editor.rs  presentation.rs  presentation_properties.rs  shape.rs  slide.rs  slide_layout.rs  slide_layout_io.rs  slide_master.rs  slide_master_io.rs  smartart.rs  table.rs  table_style.rs  text.rs  theme.rs  timing.rs  transition.rs  vba_preserve.rs
crates/offidized-pptx/tests/: content_roundtrip.rs  layout_master_write_api.rs
crates/offidized-py/: Cargo.toml  README.md  justfile  pyproject.toml
crates/offidized-py/examples/: offidized_pydantic_ai_toolsets.py
crates/offidized-py/src/: docx.rs  error.rs  ir.rs  lib.rs  pptx.rs
crates/offidized-py/tests/: test_pydantic_ai.py  test_smoke.py
crates/offidized-schema/: Cargo.toml  README.md  build.rs
crates/offidized-schema/src/: catalog.rs  lib.rs  raw.rs
crates/offidized-wasm/: Cargo.toml  README.md
crates/offidized-wasm/src/: lib.rs
crates/offidized-xlsx/: Cargo.toml  README.md
crates/offidized-xlsx/src/: auto_filter.rs  cell.rs  chart.rs  chart_io.rs  color.rs  column.rs  error.rs  finance.rs  formula_bridge.rs  lib.rs  named_style.rs  numfmt.rs  pivot_table.rs  pivot_table_io.rs  print_settings.rs  range.rs  reference.rs  row.rs  shared_strings.rs  sparkline.rs  style.rs  theme.rs  workbook.rs  workbook_lint.rs  worksheet.rs
crates/offidized-xlsx/tests/: chart_roundtrip.rs  content_roundtrip.rs  dirty_roundtrip.rs  pivot_table_roundtrip.rs  range_operations.rs  reference_corpus_roundtrip.rs  regression_tests.rs
crates/offidized-xlview/: CLAUDE.md  Cargo.toml  ECMA376_COMPLIANCE.md  README.md  WEB_SYS_CANVAS_GUIDE.md  build.mjs  editor.html  index.html  justfile  package-lock.json  package.json  tsconfig.json
crates/offidized-xlview/benches/: parsing.rs
crates/offidized-xlview/js/: xl-edit.d.ts  xl-edit.ts  xl-view.d.ts  xl-view.ts
crates/offidized-xlview/scripts/: patch-pkg.mjs
crates/offidized-xlview/src/: adapter.rs  cell_ref.rs  csv.rs  error.rs  lib.rs
crates/offidized-xlview/test/: gallery.ts
crates/offidized-xlview/tests/: alignment_tests.rs  auto_filter_tests.rs  border_style_tests.rs  border_tests.rs  cell_type_tests.rs  cf_data_bar_negative_tests.rs  cf_rule_tests.rs  chart_tests.rs  charts_tests.rs  comment_indicator_tests.rs  comment_rich_text_tests.rs  comment_tests.rs  conditional_formatting_tests.rs  date_format_tests.rs  dimension_tests.rs  fill_tests.rs  font_rendering_tests.rs  font_tests.rs  frozen_panes_rendering_tests.rs  frozen_panes_tests.rs  gradient_fill_tests.rs  images_tests.rs  inline_string_tests.rs  layout_debug.rs  layout_tests.rs  merge_tests.rs  mod.rs  named_styles_tests.rs  numfmt_tests.rs  pattern_fill_tests.rs  rendering_tests.rs  rich_text_tests.rs  shrink_to_fit_tests.rs  sparkline_tests.rs  tab_bar_tests.rs  test_helpers.rs  text_box_tests.rs  text_rotation_tests.rs  viewport_scroll_tests.rs
crates/offidized/src/: lib.rs
tools/offidized-differential/: Cargo.toml
tools/offidized-differential/src/: main.rs
(+232 files in other folders)
