[package]
name = "offidized-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for reading, writing, and manipulating OOXML files"

[[bin]]
name = "ofx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
offidized-opc = { workspace = true }
offidized-xlsx = { workspace = true }
offidized-docx = { workspace = true }
offidized-ir = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
