[package]
name = "offidized-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code generator: XSD/JSON schemas → Rust types for OOXML elements"

[dependencies]
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
