[package]
name = "offidized-docview"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM-powered Word document viewer"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
editing = ["dep:yrs", "dep:uuid"]

[dependencies]
offidized-docx.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
base64.workspace = true
thiserror.workspace = true
console_error_panic_hook.workspace = true
zip.workspace = true
yrs = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
