[package]
name = "offidized-docx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level Word API — read, write, and manipulate .docx files"

[dependencies]
offidized-opc.workspace = true
offidized-schema.workspace = true
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
