[package]
name = "offidized-formula"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Excel formula parser and evaluator for offidized"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
fastrand = "2.2"

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
