[package]
name = "offidized-pptx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level PowerPoint API — read, write, and manipulate .pptx files"

[dependencies]
offidized-opc.workspace = true
offidized-schema.workspace = true
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true

[lints]
workspace = true
