[package]
name = "offidized-xlsx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-level Excel API — read, write, and manipulate .xlsx files"

[dependencies]
offidized-formula.workspace = true
offidized-opc.workspace = true
offidized-schema.workspace = true
quick-xml.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
rstar.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
zip.workspace = true

[lints]
workspace = true
